fix: link wrap in samll viewport #535

--- a/packages/dendron-11ty/raw-assets/sass/content.scss
+++ b/packages/dendron-11ty/raw-assets/sass/content.scss
@@ -21,7 +21,7 @@
   a {
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    // white-space: nowrap;
   }
 
   ul,
